--- a/grilla.html
+++ b/grilla.html
@@ -9,9 +9,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style>
+        .col-3 {
+            border: 1px solid blue;
+        }
+        .col-9 {
+            border: 1px solid red;
+        }
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-3" style="background: yellow;">
+            1 
+          </div>
+          <div class="col-12 col-lg-4" style="background: blue;">
+            2 
+          </div>
+          <div class="col-2">
+            3
+          </div>
+          <div class="col-10">
+            4
+          </div>
+        </div>
+      </div>
+
+
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
