--- a/index.html
+++ b/index.html
@@ -48,6 +48,42 @@
     </nav>
 
     <!-- Fin Header -->
+
+    <!-- carrusel inicio -->
+    <section id="main">
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-pause=“false”>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/hawaii.jpg" class="d-block w-100" alt="hawaii 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/hawaii2.jpg" class="d-block w-100" alt="hawaii 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/hawaii3.jpeg" class="d-block w-100" alt="hawaii 3">
+                </div>
+            </div>
+            <div class="overlay carousel-caption ">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-md-6 offset-md-6 text-center text-md-end">
+                            <h1>Platzi Conf Hawaii</h1>
+                            <p class="d-none d-sm-block">Platzi conf llega por primera vez a hawwai, un evento para
+                                 compartir con nuestra comunidad el conocimiento y experiencia
+                                  de los expertos que estan creando el futuro internet, Ven a 
+                                  conocer a miembros del Team Platzi, a otros estudiantes y a los
+                                   oradores de primer nivel que tenemos para ti. Te esperamos !!
+                            </p>
+                            <a href="#">Quiero ser orador</a>
+                            <button type="button">Quiero comprar tickets</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- fin carrusel -->
 <!-- Inicio Footer -->
     <footer id="footer" class="pb-4 pt-4">
         <div class="container">
