agregue a fabri y alfredo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/alffa-logo.png" alt="Platzi Logo">
-                    Proyecto Familiar
+                    Proyecto Jubilatorio
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-bs-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -63,6 +63,9 @@
                 </div>
                 <div class="carousel-item">
                     <img src="assets/images/fabririosantiago.jpg" class="d-block w-100" alt="hawaii 3">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/alfredo.jpg" class="d-block w-100" alt="hawaii 3">
                 </div>
             </div>
             <div class="overlay carousel-caption ">
@@ -130,7 +133,7 @@
                 <div class="row">
                     <div class="col-md-6 col-xl-4 mb-4">
                         <div class="card">
-                            <img src="assets/speakers/sacha.jpg" class="rounded-circle" alt="foto de sacha">
+                            <img src="assets/speakers/alfredo.jpg"  alt="foto de Alfredo">
                             <div class="card-body">
                                 <div class="badges">
                                   <span class="badge bg-warning text-dark">
@@ -140,7 +143,7 @@
                                       react
                                   </span>
                                 </div>
-                              <h5 class="card-title">Sacha lifszyc</h5>
+                              <h5 class="card-title">Alfredo Gayala</h5>
                               <p class="card-text">Nunc lacinia magna enim, auctor porttitor mauris rhoncus non. Ut pharetra nisi ut lacus tristique sagittis. Nam pulvinar maximus tempus. Quisque elit dui, imperdiet vel bibendum at, aliquet sit amet mi. Integer pretium, sem non consectetur facilisis, eros est vulputate metus, eu volutpat eros neque ut lectus. Aliquam egestas lacus tortor, vel venenatis elit tempus quis. Sed nulla tellus, gravida ut tristique id, porta ac eros. Nunc ac elit erat.</p>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
@@ -148,7 +151,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4 mb-4">
                         <div class="card">
-                            <img src="assets/speakers/leonidas2.jpeg" class="rounded-circle" alt="...">
+                            <img src="assets/speakers/fabrizio.jpg"  alt="foto de Fabri">
                             <div class="card-body">
                                 <div class="badges">
                                     <span class="badge bg-primary">
@@ -158,7 +161,7 @@
                                         Front-end
                                     </span>
                                 </div>
-                              <h5 class="card-title mb-0">Eonida Esteban</h5>
+                              <h5 class="card-title mb-0">Fabrizio Gayala</h5>
                               <p class="card-text">Nunc lacinia magna enim, auctor porttitor mauris rhoncus non. Ut pharetra nisi ut lacus tristique sagittis. Nam pulvinar maximus tempus. Quisque elit dui, imperdiet vel bibendum at, aliquet sit amet mi. Integer pretium, sem non consectetur facilisis, eros est vulputate metus, eu volutpat eros neque ut lectus. Aliquam egestas lacus tortor, vel venenatis elit tempus quis. Sed nulla tellus, gravida ut tristique id, porta ac eros. Nunc ac elit erat.</p>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
@@ -166,7 +169,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4 mb-4">
                         <div class="card">
-                            <img src="assets/speakers/freddy.jpeg" class="rounded-circle" alt="...">
+                            <img src="assets/speakers/fabricio.JPG"  alt="Foto Fabricio">
                             <div class="card-body">
                                 <div class="badges">
                                     <span class="badge bg-primary">
