--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                         react
                                     </span>
                                 </div>
-                              <h5 class="card-title mb-0">Freddy Vega</h5>
+                              <h5 class="card-title mb-0">Fabricio Galindo</h5>
                               <p class="card-text">Nunc lacinia magna enim, auctor porttitor mauris rhoncus non. Ut pharetra nisi ut lacus tristique sagittis. Nam pulvinar maximus tempus. Quisque elit dui, imperdiet vel bibendum at, aliquet sit amet mi. Integer pretium, sem non consectetur facilisis, eros est vulputate metus, eu volutpat eros neque ut lectus. Aliquam egestas lacus tortor, vel venenatis elit tempus quis. Sed nulla tellus, gravida ut tristique id, porta ac eros. Nunc ac elit erat.</p>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
