camisetas por ticket

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#conviertete-en-orador">Conviértete en orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Comprar tickets</a>
+                            <a class="nav-link text-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Comprar camisetas</a>
                         </li>
                     </ul>
                     
@@ -76,7 +76,7 @@
                             <p class="d-none d-sm-block">@alffa Gayala es mi proyecto personal, en el cual trato de 
                             </p>
                             <a href="#conviertete-en-orador" class="btn btn-outline-light">Quiero ser orador</a>
-                            <button type="button" class="btn btn-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal">Quiero comprar tickets</button>
+                            <button type="button" class="btn btn-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal">Quiero comprar camisetas</button>
                         </div>
                     </div>
 
