cambios para adecuar al proyecto

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link"  href="#main">La Conferencia</a>
+                            <a class="nav-link"  href="#main">Las Rutas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#speakers">Los oradores</a>
+                            <a class="nav-link" href="#speakers">Los ¨Participantes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#place-time">El lugar y la fecha</a>
+                            <a class="nav-link" href="#place-time">Próximo lugar y fecha</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#conviertete-en-orador">Conviértete en orador</a>
+                            <a class="nav-link" href="#conviertete-en-orador">Conviertete en Gayala</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Comprar camisetas</a>
@@ -73,7 +73,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6 offset-md-6 text-center text-md-end">
                             <h1>alffa Gayala</h1>
-                            <p class="d-none d-sm-block">@alffa Gayala es mi proyecto personal, en el cual trato de 
+                            <p class="d-none d-sm-block">@alffa Gayala es mi proyecto personal Post-Jubilatorio donde plasmaré mis andanzas y demás peripecias de éste futuro viejito viajero. Además iré incrementando secciones donde describan las tecnologías utilizadas para hacer desde cero este espacio cibernético 
                             </p>
                             <a href="#conviertete-en-orador" class="btn btn-outline-light">Quiero ser orador</a>
                             <button type="button" class="btn btn-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal">Quiero comprar camisetas</button>
@@ -91,7 +91,7 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="staticBackdropLabel">Comprar ticket</h5>
+              <h5 class="modal-title" id="staticBackdropLabel">Comprar Camisetas</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -127,7 +127,7 @@
                 <div class="row">
                     <div class="col text-center text-uppercase">
                         <small>Conoce a los</small>
-                        <h2>Oradores</h2>
+                        <h2>Participantes</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -137,10 +137,10 @@
                             <div class="card-body">
                                 <div class="badges">
                                   <span class="badge bg-warning text-dark">
-                                      JavaScript
+                                      Redes
                                   </span>
                                   <span class="badge bg-info text-dark">
-                                      react
+                                      Java Script
                                   </span>
                                 </div>
                               <h5 class="card-title">Alfredo Gayala</h5>
@@ -158,7 +158,7 @@
                                         Html
                                     </span>
                                     <span class="badge bg-secondary">
-                                        Front-end
+                                        PHP
                                     </span>
                                 </div>
                               <h5 class="card-title mb-0">Fabrizio Gayala</h5>
@@ -175,8 +175,11 @@
                                     <span class="badge bg-primary">
                                         Html
                                     </span>
-                                    <span class="badge bg-info text-dark">
-                                        react
+                                    <span class="badge bg-success">
+                                        Bootstrap
+                                    </span>
+                                    <span class="badge bg-secondary">
+                                        PHP
                                     </span>
                                 </div>
                               <h5 class="card-title mb-0">Fabricio Galindo</h5>
@@ -219,12 +222,12 @@
         <div class="row ">
             <div class="col text-uppercase text-center">
                 <small>Conviertete en</small>
-                <h2>orador</h2>
+                <h2>Gayala</h2>
             </div>
         </div>
         <div class="row">
            <div class="col text-center">
-                Anótate como orador para dar una  <abbr title="Charla de 5 minutos" data-bs-toggle="tooltip">charla ignite</abbr>. Cuéntanos de qué quieres hablar !
+                Anótate como participante de este <abbr title="Debes tener el apelligo Galindo" data-bs-toggle="tooltip">Gran Proyecto</abbr>. Cuéntanos a donde quieres ir !
             </div>
         </div> 
         <div class="row">
@@ -240,9 +243,9 @@
                       </div>
                       <div class="form-row">
                           <div class="form-label col">
-                              <textarea name="text" class="form-control form-control-lg" placeholder="Sobre qué quieres hablar" ></textarea>
+                              <textarea name="text" class="form-control form-control-lg" placeholder="Describe el viaje" ></textarea>
                               <small class="form-text text-muted">
-                                  Recuerda incluir un titulo para tu charla
+                                  Recuerda incluir porque quieres ir ahí !!
                               </small>
                           </div>
                       </div>
@@ -277,9 +280,7 @@
                 <div class="col-12 col-lg">
                     <a href="#">Privacidad</a>
                 </div>
-                <div class="col-12 col-lg">
-                    <a href="#">Estudiantes</a>
-                </div>
+                
             </div>
         </div>
     </footer>
