cambios para adecuar al proyecto II

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </form>
               <!-- alerta  -->
               <div class="alert alert-warning text-center" role="alert">
-                Recibiras un correo confirmacion si sales sorteado
+                Recibiras un correo confirmacion
               </div>
               <!-- fin alerta -->
 
