cambios para adecuar al proyecto III

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <h1>alffa Gayala</h1>
                             <p class="d-none d-sm-block">@alffa Gayala es mi proyecto personal Post-Jubilatorio donde plasmaré mis andanzas y demás peripecias de éste futuro viejito viajero. Además iré incrementando secciones donde describan las tecnologías utilizadas para hacer desde cero este espacio cibernético 
                             </p>
-                            <a href="#conviertete-en-orador" class="btn btn-outline-light">Quiero ser orador</a>
+                            <a href="#conviertete-en-orador" class="btn btn-outline-light">Quiero ser Gayala</a>
                             <button type="button" class="btn btn-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal">Quiero comprar camisetas</button>
                         </div>
                     </div>
