--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="assets/images/fabriyyo.jpg" class="d-block w-100" alt="hawaii 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/fabri.jpg" class="d-block w-100" alt="hawaii 3">
+                    <img src="assets/images/fabriII.jpg" class="d-block w-100" alt="hawaii 3">
                 </div>
                 <div class="carousel-item">
                     <img src="assets/images/cajon_1.jpg" class="d-block w-100" alt="hawaii 2">
@@ -208,7 +208,7 @@
                  <p><abbr title="En hawaiano, significa bahía resguardada o lugar de resguardo." data-bs-toggle="tooltip">Honolulu​</abbr> es la capital y localidad más grande del estado de Hawái, en los Estados Unidos.Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).
 
                     Se dice que antiguamente se llamaba Kou, el nombre de un distrito que abarca aproximadamente el área desde Nuuanu Avenue a Alakea Street y de Hotel Street a Queen Street, y que es el corazón del actual distrito del centro.3​Otros lugares de Oahu con renombre internacional son Waikiki, Pearl Harbor y Diamond Head. Según el censo del 1 de julio de 2004, las estimaciones de población de Honolulu eran de 377 260 habs. y para el condado completo, de 900,000. Aquí en 1961 nació Barack Obama, presidente de los Estados Unidos entre 2009 y 2017.</p>
-                    <a href="https://es.wikipedia.org/wiki/Honolulu" class="btn btn-outline-light">Conoce más</a>
+                    <a href="https://es.wikipedia.org/wiki/Honolulu" class="btn btn-outline-light" >Conoce más</a>
             </div>
         </div>
     </div>
